--- a/inicio.html
+++ b/inicio.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level-up Gamer - Iniciar Sesión</title>
+    <title>Level-up Gamer</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,32 +18,13 @@
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Catálogo</a></li>
-                    <li><a href="#">Perfil</a></li>
                 </ul>
             </nav>
+            <div id="user-area"></div>
         </div>
     </header>
 
-    <div id="contenedor-principal">
-        <div id="titulo">
-            <h1>Iniciar Sesión</h1>
-        </div>
-        <div id="body">
-            <form action="#" id="formulario">
-                <div class="row">
-                    <label for="correo">Ingresa tu Correo: <br></label>
-                    <input type="email" name="correo" id="correo" placeholder="Correo123@gmail.com">
-                </div>
-                <div class="row">
-                    <label for="clave">Ingresa tu contraseña: <br></label>
-                    <input type="password" name="clave" id="clave" placeholder="contraseña123">
-                </div>
-                <div class="row">
-                    <button type="submit">Iniciar Sesión</button>
-                </div>
-            </form>
-            <p>¿No tienes una cuenta?<br> <a href="#">Registrate aqui</a></p>
-        </div>
-    </div>
+    <script src="js/auth.js"></script>
 </body>
+
 </html>
