Agrege inicio y un carrito

--- a/ini_sesion.html
+++ b/ini_sesion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Level-up Gamer - Iniciar Sesión</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ini_sesion.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,10 @@
                     <li><a href="#">Catálogo</a></li>
                 </ul>
             </nav>
-            <div id="user-area"></div>
+            <div id="user-area">
+                <a href="ini_sesion.html">Iniciar Sesión</a>
+                <a href="registro.html">Registrarse</a>
+            </div>
         </div>
     </header>
 
