Se hizo lo que se pudo

--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="#catalogo">Catálogo</a></li>
+                    <li><a href="catalogo.html">Catálogo</a></li>
                 </ul>
             </nav>
             <div class="user-cart-area">
@@ -59,7 +59,7 @@
             <div class="hero-content">
                 <h1>¡Desafía tus límites con Level-Up Gamer!</h1>
                 <p>Conviértete en el héroe de tu propia historia y únete a nuestra comunidad de jugadores. Encuentra los mejores productos gaming en Chile con envío a todo el país.</p>
-                <a href="#catalogo" class="cta-button">¡Explora el Catálogo!</a>
+                <a href="catalogo.html" class="cta-button">¡Explora el Catálogo!</a>
             </div>
         </section>
 
@@ -159,7 +159,7 @@
         </div>
     </footer>
 
-    <script src="js/carrito.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
