--- a/auriculares.html
+++ b/auriculares.html
@@ -176,5 +176,6 @@ durante largas sesiones de juego.
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
