--- a/controlxbox.html
+++ b/controlxbox.html
@@ -175,5 +175,6 @@ botones mapeables y una respuesta táctil mejorada. Compatible con consolas Xbox
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
