--- a/ini_sesion.html
+++ b/ini_sesion.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="#">Catálogo</a></li>
+                    <li><a href="catalogo.html">Catálogo</a></li>
                 </ul>
             </nav>
             <div id="user-area">
