--- a/poleras.html
+++ b/poleras.html
@@ -175,5 +175,6 @@ posibilidad de personalizarla con tu gamer tag o diseño favorito
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
