--- a/silla.html
+++ b/silla.html
@@ -175,5 +175,6 @@ ergonómico y personalización ajustable para sesiones de juego prolongadas.
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
