--- a/carcassonne.html
+++ b/carcassonne.html
@@ -176,5 +176,6 @@ familia o con amigos.
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
