--- a/mousepad.html
+++ b/mousepad.html
@@ -180,5 +180,6 @@ movimiento del mouse.
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
