--- a/pcgamer.html
+++ b/pcgamer.html
@@ -181,5 +181,6 @@ cualquier juego.
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
