--- a/perfil.html
+++ b/perfil.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="#">Catálogo</a></li>
+                    <li><a href="catalogo.html">Catálogo</a></li>
                 </ul>
             </nav>
             <a href="perfil.html" class="btn btn-login" style="background-color:#39FF14;color:#000;border:2px solid #39FF14;margin-left:10px;">
