--- a/ps5.html
+++ b/ps5.html
@@ -188,5 +188,6 @@
     <script src="js/cart.js"></script>
     <script src="js/reviews.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
