Si se pudo gente

--- a/auriculares.html
+++ b/auriculares.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Level-Up Gamer</title>
     <link rel="stylesheet" href="css/productos.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
      <header>
@@ -21,9 +22,9 @@
             </nav>
             <div class="user-cart-area">
                 <div id="user-area">
-                    <a href="ini_sesion.html">Iniciar Sesión</a>
-                    <a href="registro.html">Registrarse</a>
-                </div>
+                <a href="ini_sesion.html">Iniciar Sesión</a>
+                <a href="registro.html">Registrarse</a>
+            </div>
                 <div class="cart-icon" onclick="toggleCart()">
                     <svg viewBox="0 0 24 24">
                         <path d="M7 18c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.36 2.45c-.16.28-.24.61-.24.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12L8.1 13h7.45c.75 0 1.41-.42 1.75-1.03L21.7 4H5.21l-.94-2H1zm16 16c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
