--- a/ini_sesion.html
+++ b/ini_sesion.html
@@ -33,7 +33,7 @@
             <h1>Iniciar Sesión</h1>
         </div>
         <div id="body">
-            <form onsubmit="event.preventDefault(); login();">
+            <form id="login-form" onsubmit="event.preventDefault(); login();">
                 
                 <div class="row">
                     <label for="correo">Ingresa tu Correo: <br></label>
